--- a/media.html
+++ b/media.html
@@ -27,7 +27,7 @@
     </nav>
 
     <section>
-        <main style="background-color:burlywood;">
+        <main style="background-color: white; border: 1px;">
             <ul>
                 <li>
                     <a href="gallery.html">Gallery</a>
@@ -40,7 +40,7 @@
         </main>
     
         <aside>
-            <h2>Additional Information</h2>
+            <h4>Additional Information</h4>
             <ul>
                 <li><a href="https://en.wikipedia.org/wiki/Vallabhbhai_Patel" target="_blank">Wikipedia</a></li>
                 <li><a href="https://www.britannica.com/biography/Vallabhbhai-Patel" target="_blank"> Britannica</a></li>
